<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GCDActivity">

    <TextView
        android:id="@+id/gHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/gcd_header"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:textSize="35sp"
        android:textAppearance="@android:style/TextAppearance.Large"/>

    <EditText
        android:id="@+id/editGCD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/gcd_hint"
        android:layout_gravity="center"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/solveGCD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/get"
        android:onClick="onGet"/>

    <TextView
        android:id="@+id/viewGCD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>